# mod-lab03-coffee

./: .gitignore  CMakeLists.txt
include/: Automata.h
src/: Automata.cpp  CMakeLists.txt  main  main.cpp
test/: CMakeLists.txt  tests.cpp
